# Trabalho_Final_Embarcados

./: .gitignore  CMakeLists.txt  INTEGRACAO.md  README.md  RODAR_TUDO.md  build.ps1  build.sh  flash.ps1  flash.sh  menuconfig.ps1  menuconfig.sh  prj.conf  start_env.ps1  udp_cli.ps1
.claude/: launch.json
boards/: nucleo_g474re.conf  nucleo_g474re.overlay
esp32_bridge/: esp32_bridge.ino
src/: bridge_uart.h  keyboard.c  main.c  telemetry.c  uart_cli.c  vibration.h  zbus.c
webapp/: .gitignore  COMO_RODAR.md  README.md  docker-compose.yml
webapp/backend/: VibraMonitor.slnx
webapp/backend/VibraMonitor.Api/: Program.cs  VibraMonitor.Api.csproj  VibraMonitor.Api.http  appsettings.json
webapp/backend/VibraMonitor.Api/Data/: AppDbContext.cs
webapp/backend/VibraMonitor.Api/Hubs/: VibrationHub.cs
webapp/backend/VibraMonitor.Api/Migrations/: 20260704131735_InitialCreate.Designer.cs  20260704131735_InitialCreate.cs  AppDbContextModelSnapshot.cs
webapp/backend/VibraMonitor.Api/Models/: Dtos.cs  VibrationReading.cs
webapp/backend/VibraMonitor.Api/Services/: IngestionService.cs  MonitoringOptions.cs  SimulatorService.cs
webapp/frontend/: .env  package-lock.json  package.json
webapp/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
webapp/frontend/src/components/: HarmonicChart.tsx  KpiCard.tsx  ReadingsTable.tsx  SpectrumChart.tsx
